--- a/Report/report.ipynb
+++ b/Report/report.ipynb
@@ -114628,21 +114628,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\marvaar\\AppData\\Local\\Temp\\ipykernel_17576\\335873607.py:51: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "C:\\Users\\marvaar\\AppData\\Local\\Temp\\ipykernel_17576\\982409994.py:51: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
       "\n",
       "\n",
       "  train['prev_rotation'].fillna(method='ffill', inplace=True)\n",
-      "C:\\Users\\marvaar\\AppData\\Local\\Temp\\ipykernel_17576\\335873607.py:51: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "C:\\Users\\marvaar\\AppData\\Local\\Temp\\ipykernel_17576\\982409994.py:51: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  train['prev_rotation'].fillna(method='ffill', inplace=True)\n"
      ]
     },
@@ -114689,7 +114689,23 @@
       "building tree 17 of 20\n",
       "building tree 18 of 20\n",
       "building tree 19 of 20\n",
-      "building tree 20 of 20\n",
+      "building tree 20 of 20\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\marvaar\\Documents\\tdt4173\\venv_tdt4173\\Lib\\site-packages\\sklearn\\base.py:486: UserWarning: X has feature names, but RandomForestRegressor was fitted without feature names\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\marvaar\\Documents\\tdt4173\\venv_tdt4173\\Lib\\site-packages\\sklearn\\base.py:486: UserWarning: X has feature names, but RandomForestRegressor was fitted without feature names\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Mean Absolute Error for Latitude: 0.07953907911911884\n",
       "Mean Absolute Error for Longitude: 0.11907471019289473\n"
      ]
@@ -114768,10 +114784,10 @@
     "\n",
     "# Train the model\n",
     "model_lat = RandomForestRegressor(n_estimators=20, verbose=3, random_state=42)\n",
-    "model_lat.fit(X_lat_train, y_lat_train)\n",
+    "model_lat.fit(X_lat_train.values, y_lat_train.values)\n",
     "\n",
     "model_lon = RandomForestRegressor(n_estimators=20, verbose=3, random_state=42)\n",
-    "model_lon.fit(X_lon_train, y_lon_train)\n",
+    "model_lon.fit(X_lon_train.values, y_lon_train.values)\n",
     "\n",
     "# Make predictions on the validation set\n",
     "y_lat_pred_val = model_lat.predict(X_lat_val)\n",
@@ -114783,6 +114799,170 @@
     "\n",
     "print(f'Mean Absolute Error for Latitude: {mae_lat}')\n",
     "print(f'Mean Absolute Error for Longitude: {mae_lon}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load AIS historical data\n",
+    "training_data = pd.read_csv(filepath_train, sep ='|')  # Replace with your dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import datetime\n",
+    "\n",
+    "# Predict future positions\n",
+    "def predict_future_position(id, vessel_id, time):\n",
+    "    # Fetch the latest known position of the vessel\n",
+    "    latest_data = training_data[training_data['vesselId'] == vessel_id].sort_values(by='time').iloc[-1]\n",
+    "\n",
+    "    new_data = {\n",
+    "        'prev_lat': latest_data['latitude'],\n",
+    "        'prev_lon': latest_data['longitude'],\n",
+    "        'prev_speed': latest_data['sog'],\n",
+    "        'prev_course': (latest_data['cog'] / 180) - 1,\n",
+    "        'prev_rotation': latest_data['rot'],\n",
+    "        'turn_info_available': 1 if latest_data['rot'] != -128 else 0,\n",
+    "        'prev_heading' : (latest_data['heading'] / 180) - 1,\n",
+    "\n",
+    "        # Convert the times to a datetime_obj\n",
+    "        'time_diff_seconds' : (datetime.strptime(time, '%Y-%m-%d %H:%M:%S') - datetime.strptime(latest_data['time'], '%Y-%m-%d %H:%M:%S')).total_seconds(),\n",
+    "    }\n",
+    "    # why is it done with all this list stuff?\n",
+    "    return id, model_lat.predict([list(new_data.values())])[0], model_lon.predict([list(new_data.values())])[0]\n",
+    "    # return id, model_lat.predict([list(new_data.values())]), model_lon.predict([list(new_data.values())]), new_data['time_diff_seconds'], latest_data['time']\n",
+    "\n",
+    "# ['prev_lat', 'prev_lon', 'prev_speed', 'prev_course','prev_rotation', 'turn_info_available', 'prev_heading', 'time_diff_seconds']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 51739/51739 [44:18<00:00, 19.46it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tqdm import tqdm\n",
+    "# Open the test file for reading and the prediction file for writing\n",
+    "with open('../datasets/ais_test.csv', 'r') as f_test, open('../predictions/predictions.csv', 'w') as f_pred:\n",
+    "    f_pred.write(\"ID,longitude_predicted,latitude_predicted\\n\")\n",
+    "    for line in tqdm(f_test.readlines()[1:]):\n",
+    "        id, vesselID, time, scaling_factor = line.split(',')\n",
+    "        id, pred_lat, pred_lon = predict_future_position(id, vesselID, time)\n",
+    "        f_pred.write(f\"{id},{pred_lat:.6f},{pred_lon:.6f}\\n\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time</th>\n",
+       "      <th>cog</th>\n",
+       "      <th>sog</th>\n",
+       "      <th>rot</th>\n",
+       "      <th>heading</th>\n",
+       "      <th>navstat</th>\n",
+       "      <th>etaRaw</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>vesselId</th>\n",
+       "      <th>portId</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1521883</th>\n",
+       "      <td>2024-05-07 23:48:16</td>\n",
+       "      <td>179.6</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>344</td>\n",
+       "      <td>5</td>\n",
+       "      <td>05-06 10:45</td>\n",
+       "      <td>31.14647</td>\n",
+       "      <td>-81.49789</td>\n",
+       "      <td>61e9f3aeb937134a3c4bfe3d</td>\n",
+       "      <td>61d38499b7b7526e1adf3d54</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        time    cog  sog  rot  heading  navstat       etaRaw  \\\n",
+       "1521883  2024-05-07 23:48:16  179.6  0.0    0      344        5  05-06 10:45   \n",
+       "\n",
+       "         latitude  longitude                  vesselId  \\\n",
+       "1521883  31.14647  -81.49789  61e9f3aeb937134a3c4bfe3d   \n",
+       "\n",
+       "                           portId  \n",
+       "1521883  61d38499b7b7526e1adf3d54  "
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Load AIS historical data\n",
+    "training_data = pd.read_csv(filepath_train, sep ='|')  # Replace with your dataset\n",
+    "training_data[training_data['vesselId'] == '61e9f3aeb937134a3c4bfe3d'].sort_values(by='time').iloc[-1:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "And the number is: 0.12914\n"
+     ]
+    }
+   ],
+   "source": [
+    "float_num = 0.129137128418742\n",
+    "print(f\"And the number is: {float_num:.5f}\")"
    ]
   },
   {
