After beating VT3, but before cleanup. Very ugly and messy code

--- a/Report/report.ipynb
+++ b/Report/report.ipynb
@@ -115087,6 +115087,41 @@
     "future_lat, future_lon = predict_future_position('Vessel123', pd.Timestamp.now() + timedelta(hours=1))\n",
     "print(f'Predicted Future Position: Latitude {future_lat[0]}, Longitude {future_lon[0]}')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def clip(val):\n",
+    "    if val > 90:\n",
+    "        return 90\n",
+    "    elif val < -90:\n",
+    "        return -90\n",
+    "    return val"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 51739/51739 [00:00<00:00, 393586.61it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('../predictions/predictions_1.csv', 'r') as f, open('../predictions/predictions_2.csv', 'w') as f_new:\n",
+    "    f_new.write(\"ID,longitude_predicted,latitude_predicted\\n\")\n",
+    "    for line in tqdm(f.readlines()[1:]):\n",
+    "        id, lat, lon = line.split(',')\n",
+    "        f_new.write(f\"{id},{float(lon):.6f},{float(lat):.6f}\\n\")"
+   ]
   }
  ],
  "metadata": {
