fixed bug that removed a lot of data. Also started adding schedule stuff

--- a/Report/report.ipynb
+++ b/Report/report.ipynb
@@ -114628,7 +114628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114638,31 +114638,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Parameters \n",
-    "timedelta_threshold_days = 15"
+    "timedelta_threshold_days = 100"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\marvaar\\AppData\\Local\\Temp\\ipykernel_15180\\4014380975.py:51: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "C:\\Users\\mariu\\AppData\\Local\\Temp\\ipykernel_24696\\4014380975.py:51: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
       "\n",
       "\n",
       "  train['prev_rotation'].fillna(method='ffill', inplace=True)\n",
-      "C:\\Users\\marvaar\\AppData\\Local\\Temp\\ipykernel_15180\\4014380975.py:51: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "C:\\Users\\mariu\\AppData\\Local\\Temp\\ipykernel_24696\\4014380975.py:51: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  train['prev_rotation'].fillna(method='ffill', inplace=True)\n"
      ]
     },
@@ -114670,7 +114670,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Rows with too high timedeltas: 605\n",
+      "Rows with too high timedeltas: 0\n",
       "building tree 1 of 20\n",
       "building tree 2 of 20\n",
       "building tree 3 of 20\n",
@@ -114717,9 +114717,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\marvaar\\Documents\\tdt4173\\venv_tdt4173\\Lib\\site-packages\\sklearn\\base.py:486: UserWarning: X has feature names, but RandomForestRegressor was fitted without feature names\n",
+      "c:\\Users\\mariu\\OneDrive\\Desktop\\moderne_maskinlæring\\venv_tdt4173\\Lib\\site-packages\\sklearn\\base.py:486: UserWarning: X has feature names, but RandomForestRegressor was fitted without feature names\n",
       "  warnings.warn(\n",
-      "c:\\Users\\marvaar\\Documents\\tdt4173\\venv_tdt4173\\Lib\\site-packages\\sklearn\\base.py:486: UserWarning: X has feature names, but RandomForestRegressor was fitted without feature names\n",
+      "c:\\Users\\mariu\\OneDrive\\Desktop\\moderne_maskinlæring\\venv_tdt4173\\Lib\\site-packages\\sklearn\\base.py:486: UserWarning: X has feature names, but RandomForestRegressor was fitted without feature names\n",
       "  warnings.warn(\n"
      ]
     },
@@ -114727,8 +114727,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Absolute Error for Latitude: 0.06950002112165703\n",
-      "Mean Absolute Error for Longitude: 0.10205790969572574\n"
+      "Mean Absolute Error for Latitude: 0.07953907911911884\n",
+      "Mean Absolute Error for Longitude: 0.11907471019289473\n"
      ]
     }
    ],
@@ -114770,6 +114770,9 @@
     "# Adding timedelta as a feature\n",
     "train['time_diff'] = train['time'].diff()\n",
     "train['time_diff_seconds'] = train['time_diff'].dt.total_seconds()\n",
+    "\n",
+    "# Add schedule related stuff\n",
+    "sched_df = pd.read_csv('../datasets/schedules_to_may_2024.csv', sep='|')\n",
     "\n",
     "\n",
     "# --------------------------------- prev_rot-related stuff\n",
@@ -115185,7 +115188,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
