checkpoint before pulling

--- a/Report/report.ipynb
+++ b/Report/report.ipynb
@@ -115170,6 +115170,89 @@
     "        id, lat, lon = line.split(',')\n",
     "        f_new.write(f\"{id},{float(lon):.6f},{float(lat):.6f}\\n\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  vesselId            timestamp   latitude  longitude   sog  cog  heading  \\\n",
+      "0     B456  2024-10-16 08:05:00  60.010000  11.010000   9.5   84       88   \n",
+      "1     A123  2024-10-16 08:05:00  59.920000  10.760000  13.0   88       90   \n",
+      "2     A123  2024-10-16 08:10:00  59.930000  10.762000  12.5   87       91   \n",
+      "3     C789  2024-10-16 08:05:00  58.010000  12.010000  11.2   73       78   \n",
+      "4     B456  2024-10-16 08:00:00  60.000000  11.000000  10.0   85       89   \n",
+      "5     B456  2024-10-16 08:10:00  60.020000  11.020000   9.8   82       87   \n",
+      "6     A123  2024-10-16 08:00:00  59.911491  10.757933  12.4   90       92   \n",
+      "7     C789  2024-10-16 08:00:00  58.000000  12.000000  11.5   75       80   \n",
+      "8     C789  2024-10-16 08:10:00  58.020000  12.020000  11.3   72       77   \n",
+      "\n",
+      "   navstat  \n",
+      "0        1  \n",
+      "1        0  \n",
+      "2        0  \n",
+      "3        0  \n",
+      "4        1  \n",
+      "5        1  \n",
+      "6        0  \n",
+      "7        0  \n",
+      "8        0  \n",
+      "  vesselId            timestamp   latitude  longitude   sog  cog  heading  \\\n",
+      "6     A123  2024-10-16 08:00:00  59.911491  10.757933  12.4   90       92   \n",
+      "1     A123  2024-10-16 08:05:00  59.920000  10.760000  13.0   88       90   \n",
+      "2     A123  2024-10-16 08:10:00  59.930000  10.762000  12.5   87       91   \n",
+      "4     B456  2024-10-16 08:00:00  60.000000  11.000000  10.0   85       89   \n",
+      "0     B456  2024-10-16 08:05:00  60.010000  11.010000   9.5   84       88   \n",
+      "5     B456  2024-10-16 08:10:00  60.020000  11.020000   9.8   82       87   \n",
+      "7     C789  2024-10-16 08:00:00  58.000000  12.000000  11.5   75       80   \n",
+      "3     C789  2024-10-16 08:05:00  58.010000  12.010000  11.2   73       78   \n",
+      "8     C789  2024-10-16 08:10:00  58.020000  12.020000  11.3   72       77   \n",
+      "\n",
+      "   navstat  \n",
+      "6        0  \n",
+      "1        0  \n",
+      "2        0  \n",
+      "4        1  \n",
+      "0        1  \n",
+      "5        1  \n",
+      "7        0  \n",
+      "3        0  \n",
+      "8        0  \n",
+      "  vesselId            timestamp  latitude  longitude   sog  cog  heading  \\\n",
+      "0     A123  2024-10-16 08:05:00     59.92     10.760  13.0   88       90   \n",
+      "1     A123  2024-10-16 08:10:00     59.93     10.762  12.5   87       91   \n",
+      "2     B456  2024-10-16 08:05:00     60.01     11.010   9.5   84       88   \n",
+      "3     B456  2024-10-16 08:10:00     60.02     11.020   9.8   82       87   \n",
+      "4     C789  2024-10-16 08:05:00     58.01     12.010  11.2   73       78   \n",
+      "5     C789  2024-10-16 08:10:00     58.02     12.020  11.3   72       77   \n",
+      "\n",
+      "   navstat   prev_lat  \n",
+      "0        0  59.911491  \n",
+      "1        0  59.920000  \n",
+      "2        1  60.000000  \n",
+      "3        1  60.010000  \n",
+      "4        0  58.000000  \n",
+      "5        0  58.010000  \n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "temp_df = pd.read_csv('temp.csv')\n",
+    "\n",
+    "print(temp_df)\n",
+    "temp_df.sort_values(by=['vesselId', 'timestamp'], inplace=True)\n",
+    "print(temp_df)\n",
+    "temp_df['prev_lat'] = temp_df.groupby('vesselId')['latitude'].shift(1)\n",
+    "temp_df.dropna(inplace=True)\n",
+    "temp_df.reset_index(drop=True, inplace=True)\n",
+    "print(temp_df)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
