checkpoint before testing on VM

--- a/Report/report.ipynb
+++ b/Report/report.ipynb
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,21 +483,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\marvaar\\AppData\\Local\\Temp\\ipykernel_1148\\2864780723.py:44: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "C:\\Users\\mariu\\AppData\\Local\\Temp\\ipykernel_18720\\2864780723.py:44: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
       "\n",
       "\n",
       "  train['prev_rotation'].fillna(method='ffill', inplace=True)\n",
-      "C:\\Users\\marvaar\\AppData\\Local\\Temp\\ipykernel_1148\\2864780723.py:44: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "C:\\Users\\mariu\\AppData\\Local\\Temp\\ipykernel_18720\\2864780723.py:44: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  train['prev_rotation'].fillna(method='ffill', inplace=True)\n"
      ]
     },
@@ -512,14 +512,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\marvaar\\AppData\\Local\\Temp\\ipykernel_1148\\2864780723.py:44: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "C:\\Users\\mariu\\AppData\\Local\\Temp\\ipykernel_18720\\2864780723.py:44: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
       "\n",
       "\n",
       "  train['prev_rotation'].fillna(method='ffill', inplace=True)\n",
-      "C:\\Users\\marvaar\\AppData\\Local\\Temp\\ipykernel_1148\\2864780723.py:44: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "C:\\Users\\mariu\\AppData\\Local\\Temp\\ipykernel_18720\\2864780723.py:44: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  train['prev_rotation'].fillna(method='ffill', inplace=True)\n"
      ]
     },
@@ -529,30 +529,143 @@
      "text": [
       "Length of dataset after preprocessing: 892648\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\mariu\\AppData\\Local\\Temp\\ipykernel_18720\\2864780723.py:44: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  train['prev_rotation'].fillna(method='ffill', inplace=True)\n",
+      "C:\\Users\\mariu\\AppData\\Local\\Temp\\ipykernel_18720\\2864780723.py:44: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "  train['prev_rotation'].fillna(method='ffill', inplace=True)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Length of dataset after preprocessing: 891977\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\mariu\\AppData\\Local\\Temp\\ipykernel_18720\\2864780723.py:44: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  train['prev_rotation'].fillna(method='ffill', inplace=True)\n",
+      "C:\\Users\\mariu\\AppData\\Local\\Temp\\ipykernel_18720\\2864780723.py:44: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "  train['prev_rotation'].fillna(method='ffill', inplace=True)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Length of dataset after preprocessing: 891308\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\mariu\\AppData\\Local\\Temp\\ipykernel_18720\\2864780723.py:44: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  train['prev_rotation'].fillna(method='ffill', inplace=True)\n",
+      "C:\\Users\\mariu\\AppData\\Local\\Temp\\ipykernel_18720\\2864780723.py:44: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "  train['prev_rotation'].fillna(method='ffill', inplace=True)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Length of dataset after preprocessing: 890631\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\mariu\\AppData\\Local\\Temp\\ipykernel_18720\\2864780723.py:44: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  train['prev_rotation'].fillna(method='ffill', inplace=True)\n",
+      "C:\\Users\\mariu\\AppData\\Local\\Temp\\ipykernel_18720\\2864780723.py:44: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "  train['prev_rotation'].fillna(method='ffill', inplace=True)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Length of dataset after preprocessing: 889969\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\mariu\\AppData\\Local\\Temp\\ipykernel_18720\\2864780723.py:44: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  train['prev_rotation'].fillna(method='ffill', inplace=True)\n",
+      "C:\\Users\\mariu\\AppData\\Local\\Temp\\ipykernel_18720\\2864780723.py:44: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "  train['prev_rotation'].fillna(method='ffill', inplace=True)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Length of dataset after preprocessing: 889298\n"
+     ]
     }
    ],
    "source": [
     "\n",
     "train1 = make_training_set(1)\n",
     "train2 = make_training_set(2)\n",
-    "# train3 = make_training_set(3)\n",
-    "# train4 = make_training_set(4)\n",
+    "train3 = make_training_set(3)\n",
+    "train4 = make_training_set(4)\n",
+    "train5 = make_training_set(5)\n",
+    "train6 = make_training_set(6)\n",
+    "train7 = make_training_set(7)\n",
     "\n",
-    "train = train2"
+    "train = pd.concat([train1, train2, train3, train4, train5, train6, train7], ignore_index=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "15180.802262481964"
+       "np.float64(30311.52442312245)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,71 +676,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "building tree 1 of 20\n",
-      "building tree 2 of 20\n",
-      "building tree 3 of 20\n",
-      "building tree 4 of 20\n",
-      "building tree 5 of 20\n",
-      "building tree 6 of 20\n",
-      "building tree 7 of 20\n",
-      "building tree 8 of 20\n",
-      "building tree 9 of 20\n",
-      "building tree 10 of 20\n",
-      "building tree 11 of 20\n",
-      "building tree 12 of 20\n",
-      "building tree 13 of 20\n",
-      "building tree 14 of 20\n",
-      "building tree 15 of 20\n",
-      "building tree 16 of 20\n",
-      "building tree 17 of 20\n",
-      "building tree 18 of 20\n",
-      "building tree 19 of 20\n",
-      "building tree 20 of 20\n",
-      "building tree 1 of 20\n",
-      "building tree 2 of 20\n",
-      "building tree 3 of 20\n",
-      "building tree 4 of 20\n",
-      "building tree 5 of 20\n",
-      "building tree 6 of 20\n",
-      "building tree 7 of 20\n",
-      "building tree 8 of 20\n",
-      "building tree 9 of 20\n",
-      "building tree 10 of 20\n",
-      "building tree 11 of 20\n",
-      "building tree 12 of 20\n",
-      "building tree 13 of 20\n",
-      "building tree 14 of 20\n",
-      "building tree 15 of 20\n",
-      "building tree 16 of 20\n",
-      "building tree 17 of 20\n",
-      "building tree 18 of 20\n",
-      "building tree 19 of 20\n",
-      "building tree 20 of 20\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\marvaar\\Documents\\tdt4173\\venv_tdt4173\\Lib\\site-packages\\sklearn\\base.py:486: UserWarning: X has feature names, but RandomForestRegressor was fitted without feature names\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\marvaar\\Documents\\tdt4173\\venv_tdt4173\\Lib\\site-packages\\sklearn\\base.py:486: UserWarning: X has feature names, but RandomForestRegressor was fitted without feature names\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mean Absolute Error for Latitude: 0.1020886456864137\n",
-      "Mean Absolute Error for Longitude: 0.14534685136125358\n"
+      "building tree 1 of 10\n",
+      "building tree 2 of 10\n",
+      "building tree 3 of 10\n",
+      "building tree 4 of 10\n",
+      "building tree 5 of 10\n",
+      "building tree 6 of 10\n"
      ]
     }
    ],
@@ -641,10 +702,10 @@
     "X_lon_train, X_lon_val, y_lon_train, y_lon_val = train_test_split(X, y_lon, test_size=0.1, random_state=42)\n",
     "\n",
     "# Train the model\n",
-    "model_lat = RandomForestRegressor(n_estimators=20, verbose=3, random_state=42)\n",
+    "model_lat = RandomForestRegressor(n_estimators=10, verbose=3, random_state=42)\n",
     "model_lat.fit(X_lat_train.values, y_lat_train.values)\n",
     "\n",
-    "model_lon = RandomForestRegressor(n_estimators=20, verbose=3, random_state=42)\n",
+    "model_lon = RandomForestRegressor(n_estimators=10, verbose=3, random_state=42)\n",
     "model_lon.fit(X_lon_train.values, y_lon_train.values)\n",
     "\n",
     "# Make predictions on the validation set\n",
@@ -668,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -705,13 +766,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "from tqdm import tqdm\n",
     "# Open the test file for reading and the prediction file for writing\n",
-    "with open('../datasets/ais_test.csv', 'r') as f_test, open('../predictions/predictions_3.csv', 'w') as f_pred:\n",
+    "with open('../datasets/ais_test.csv', 'r') as f_test, open('../predictions/predictions_2.csv', 'w') as f_pred:\n",
     "    f_pred.write(\"ID,longitude_predicted,latitude_predicted\\n\")\n",
     "    for line in f_test.readlines()[1:]:\n",
     "        id, vesselID, time, scaling_factor = line.split(',')\n",
@@ -736,7 +797,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
