--- a/Report/report.ipynb
+++ b/Report/report.ipynb
@@ -783,7 +783,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv_tdt4173",
    "language": "python",
    "name": "python3"
   },
